5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1670_2974.log
== TEST (2019-04-16 18:13:25) 
-- CODE:
a = int(input("quantidade de açaí"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(v)
	print(Sim)
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:35) 
-- CODE:
a = int(input("quantidade de acai"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(v)
	print(Sim)
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:43) 
-- CODE:
a = int(input("quantidade de acai"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(v)
	print(Sim)
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:56) 
-- CODE:
a = int(input("quantidade de acai"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(v)
	print("Sim")
-- ERROR:
File "XXXX", line 3
    desconto=(ingresso/200)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:14:44) 
-- CODE:
a = int(input("quantidade de acai"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(v)
	print("Sim")
else:
	print(v)
	print("Nao")
-- EXECUTION TIME:
0.205888
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
quantidade de acaiquantidade de salgadosvalor pago12003
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
quantidade de acaiquantidade de salgadosvalor pago6
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
quantidade de acaiquantidade de salgadosvalor pago4800
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:15:04) 
-- CODE:
a = int(input("quantidade de acai"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.1219
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
12003
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4800
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:05) 
-- CODE:
a = int(input("quantidade de acai"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
12003
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:15:58) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.0024)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.18223
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
4.2
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
0.48
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:00) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.024)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.175624
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
5
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:07) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.24)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.168687
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
123
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
48
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:09) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.024)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.125373
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
5
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:09) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.0024)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.146658
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
4.2
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
0.48
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:10) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.00024)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.125112
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
3.12
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
0.05
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:11) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.000024)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.142339
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
3.01
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
0.0
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:18) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
12003
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:17:09) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.24)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.153663
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
123
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
48
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:09) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*0.24)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
123
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:47) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/100)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
123
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:01) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/10)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
1203
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:50) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:00) 
-- CODE:
a = int(input("quantidade de acai em gramas"))
b = int(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.171684
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
5
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:11) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.145267
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
5
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:14) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.146085
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
quantidade de acai em gramasquantidade de salgadosvalor pago15.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
quantidade de acai em gramasquantidade de salgadosvalor pago6.0
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:14) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.194333
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
quantidade de acai em gramasquantidade de salgadosvalor pago5
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:14) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- EXECUTION TIME:
0.245153
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
quantidade de acai em gramasquantidade de salgadosvalor pago6.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
quantidade de acai em gramasquantidade de salgadosvalor pago5
Nao
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:15) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:22) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v ,))
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:19:40) 
-- CODE:
a = float(input("quantidade de acai em gramas"))
b = float(input("quantidade de salgados"))
c = float(input("valor pago"))
v = (a*24/1000)+(b*3)
if c>v:
	print(round(v, 2))
	print("Sim")
else:
	print(round(v , 2))
	print("Nao")
-- EXECUTION TIME:
0.232901
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
